Small alignment fix

--- a/inc/css/app.css
+++ b/inc/css/app.css
@@ -3148,7 +3148,7 @@ header {
     padding: 0 20px !important; }
 
   .mini .icon {
-    margin-left: -6px !important; } }
+    margin-left: -4px !important; } }
 @media (max-width: 435px) {
   .alt-feature {
     display: none !important; } }
