--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -275,7 +275,7 @@ header {
     }
     .mini {
         .icon {
-            margin-left: -6px !important;
+            margin-left: -4px !important;
         }
     }
 }
